action payloads, creators and identifiers

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div>
       <h1 class="text-4xl text-center font-bold my-10">
-        Counter: <span id="counter">0</span>
+        Counter: <span id="counter"></span>
       </h1>
       <div class="flex w-50 mx-auto w-52">
         <button
