--- a/index.html
+++ b/index.html
@@ -9,24 +9,7 @@
   </head>
   <body>
     <div>
-      <h1 class="text-4xl text-center font-bold my-10">
-        Counter: <span id="counter"></span>
-      </h1>
-      <div class="flex w-50 mx-auto w-52">
-        <button
-          id="increment"
-          class="text-xl font-semibold bg-green-500 px-4 py-2 text-white rounded me-4"
-        >
-          Increment
-        </button>
-
-        <button
-          id="decrement"
-          class="text-xl font-semibold bg-green-500 px-4 py-2 text-white rounded"
-        >
-          Decrement
-        </button>
-      </div>
+      <h1>Hello World</h1>
     </div>
     <script src="./script.js"></script>
   </body>
